@@ -14,7 +14,6 @@ import engine.GameEngine;
 import engine.StartEngine;
 import models.LongPathCard;
 import models.NormalPathCard;
-import models.Path;
 import models.Player;
 import models.TTRMap;
 import models.TrainCard;
@@ -53,10 +52,10 @@ public class GamePanel extends JPanel {
         endGame = new JButton();
 
         players = new Player[4]; 
-        players[0] = new Player("red");
-        players[1] = new Player("yellow");
-        players[2] = new Player("green");
-        players[3] = new Player("blue");
+        players[0] = new Player(0);
+        players[1] = new Player(1);
+        players[2] = new Player(2);
+        players[3] = new Player(3);
 
 
         // load train cards
@@ -110,25 +109,23 @@ public class GamePanel extends JPanel {
         ButtonPanel bp = new ButtonPanel();
         DrawPanel dp = new DrawPanel(trainCards, pathCards);
         MapPanel mp = new MapPanel();
-        SidePanel sp = new SidePanel(longCards, pathCards, trainCards, discard, turn);
+        SetupPanel sp = new SetupPanel(longCards, pathCards, players[0]);
 
         for(Player p : players){
             for(int i = 0; i < 4; i++){
-                p.addTrainCard(trainCards.removeLast());
+                p.addTrainCard(trainCards.remove(trainCards.size() - 1));
             }
         }
-        // FOR TESTING
-        // FOR TESTING
+        
         handPanels = new HandPanel[4];
         handPanels[0] = new HandPanel(players[0]);
         handPanels[1] = new HandPanel(players[1]);
         handPanels[2] = new HandPanel(players[2]);
         handPanels[3] = new HandPanel(players[3]);
-        handPanels[0].setWarningText("You do not have enough trains to claim this route!");
 
-
-        GameEngine ge = new GameEngine(bp, dp, handPanels, mp, pp, this);
-        GameController gc = new GameController(bp, dp, handPanels, mp, pp, this, se, ge);
+        GameEngine ge = new GameEngine(bp, dp, handPanels, mp, pp, sp, this);
+        GameController gc = new GameController(bp, dp, handPanels, mp, pp, sp, this, se, ge);
+        ge.setGameController(gc);
 
         pp.setBounds(Rel.X(1730), Rel.Y(20), pp.getWidth(), pp.getHeight());
         bp.setBounds(Rel.X(1700), Rel.Y(420), bp.getWidth(), bp.getHeight());
@@ -142,16 +139,17 @@ public class GamePanel extends JPanel {
         SwingUtilities.invokeLater(() -> {
             setLayout(null);
             add(pp);
-            add(bp);
             add(mp);
             add(handPanels[0]); 
-            //add(dp);
             add(sp);
+            add(bp);
+            add(dp);
+            dp.setVisible(false);
             setComponentZOrder(handPanels[0], 1);
-            //setComponentZOrder(sp, 0);
             revalidate();
             repaint();
         });
+        ge.setSetupState(true);
     }
 
     public Player[] getPlayers() {
